<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Orders.View.OrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/order_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/order_toolbar_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/login_header_strin"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/order_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_list_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_orders_to_list"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_toolbar_textview">

        <ExpandableListView
            android:id="@+id/order_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:divider="@null"
            android:groupIndicator="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_xsmall"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/order_order_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/spacing_xsmall"
            android:layout_marginRight="@dimen/spacing_xsmall"
            android:layout_weight="0.5"
            android:text="@string/orders_string"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorWhite"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/order_logout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/spacing_xsmall"
            android:layout_marginRight="@dimen/spacing_xsmall"
            android:layout_weight="0.5"
            android:text="@string/logout_string"
            app:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>