<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorWhite"
    tools:context=".Activities.Login.View.LoginActivity">

    <TextView
        android:id="@+id/login_header_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xsmall"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:layout_marginTop="@dimen/login_header_text_top"
        android:layout_marginEnd="@dimen/spacing_xsmall"
        android:layout_marginRight="@dimen/spacing_xsmall"
        android:gravity="center"
        android:text="@string/login_header_strin"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_layout"
        style="@style/MyStyle.InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xmedium"
        android:layout_marginLeft="@dimen/spacing_xmedium"
        android:layout_marginTop="@dimen/login_username_top"
        android:layout_marginEnd="@dimen/spacing_xmedium"
        android:layout_marginRight="@dimen/spacing_xmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_header_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user_24dp"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/user_name_string"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusForward="@id/login_password_edittext"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        style="@style/MyStyle.InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xmedium"
        android:layout_marginLeft="@dimen/spacing_xmedium"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_xmedium"
        android:layout_marginRight="@dimen/spacing_xmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_24dp"
            android:drawableLeft="@drawable/ic_password_24dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/login_remember_me_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xsmall"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:layout_marginTop="@dimen/spacing_xsmall"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@+id/login_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_xsmall"
        android:layout_marginLeft="@dimen/spacing_xsmall"
        android:gravity="left|center"
        android:text="@string/remember_me_string"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/login_remember_me_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_remember_me_switch"
        app:layout_constraintTop_toTopOf="@+id/login_remember_me_switch" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xmedium"
        android:layout_marginLeft="@dimen/spacing_xmedium"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:layout_marginEnd="@dimen/spacing_xmedium"
        android:layout_marginRight="@dimen/spacing_xmedium"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/login_string"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>